Improve authentication.
